[package]
name = "tomb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
dashmap = { version = "5.5.3", features = ["inline"] }
lazy_static = "1.4.0"
regex = "1.10.3"
tokio = { version = "1.35.1", features = ["full"] }
